cluster/realliance/home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: realliance
  labels:
    app: home
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      namespace: realliance
      labels:
        app: home
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
      containers:
        - name: home
          image: quay.io/realliance/realliance.net:1.1.1@sha256:80a9375956551622fc8ba4b45086610a2791a562286994a937027b66b4ea1d5c
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
          volumeMounts:
          - mountPath: /tmp
            name: tmp
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: realliance
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: home
