cluster/realliance/mumble.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mumble
spec:
  selector:
    matchLabels:
      app: mumble
  template:
    metadata:
      labels:
        app: mumble
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: mumble
          image: quay.io/realliance/murmur:__@sha256:b643e5b0cf76455176318bc4ab6c1540ef9b7d8f4b497f1e5e95d959bb7ca567
          ports:
            - containerPort: 64738
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
            - name: config
              mountPath: /etc/murmur/murmur.ini
              subPath: murmur.ini
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: mumble-tls
        - name: config
          configMap:
            name: mumble-config
---
apiVersion: v1
kind: Service
metadata:
  name: mumble-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: mumble
    external-dns.alpha.kubernetes.io/hostname: mumble.realliance.net
spec:
  type: LoadBalancer
  loadBalancerIP: 104.168.45.231
  selector:
    app: mumble
  ports:
    - protocol: TCP
      port: 64738
      targetPort: 64738
---
apiVersion: v1
kind: Service
metadata:
  name: mumble-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: mumble
spec:
  type: LoadBalancer
  loadBalancerIP: 104.168.45.231
  selector:
    app: mumble
  ports:
    - protocol: UDP
      port: 64738
      targetPort: 64738
