cluster/realliance/ingress-ace.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ace-ingress
  namespace: realliance
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_intercept_errors on;
      error_page 404 /terminated.html;
      rewrite ^/$ /terminated.html;
spec:
  tls:
    - hosts:
        - uf-ace.com
        - www.uf-ace.com
      secretName: ace-tls
  rules:
    - host: uf-ace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
    - host: www.uf-ace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
