cluster/realliance/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realliance-ingress
  namespace: realliance
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host ~* "(www\.)?uf-ace\.com$") {
        proxy_intercept_errors on;
        error_page 404 /terminated.html;
      }
spec:
  tls:
    - hosts:
        - realliance.net
        - www.realliance.net
      secretName: realliance-tls
    - hosts:
        - uf-ace.com
        - www.uf-ace.com
      secretName: ace-tls
  rules:
    - host: realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
    - host: www.realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
    - host: uf-ace.com
      http:
        paths:
          - path: /terminated.html
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
    - host: www.uf-ace.com
      http:
        paths:
          - path: /terminated.html
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
